# microwdt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmake/: microwdtConfig.cmake.in
docs/: API_REFERENCE.md  COOKBOOK.md  DESIGN.md  PORTING_GUIDE.md
include/: mwdt.h
src/: mwdt.c
tests/: Makefile  compile_fail_runner.cmake  test_all.c  test_harness_fail.c
tests/fixtures/: compile_fail_bad_assignment.c  compile_fail_bad_clock.c  compile_fail_bad_reset.c  compile_fail_bad_timeout.c  compile_fail_const_event.c  compile_fail_old_layout.c  cpp_consumer.cpp  include_twice.c  mtu_a.c  mtu_b.c  mtu_main.c  multi_call_line.c  readme_example.c
